# src/main/kotlin/pt/isel/ls/tasks/api/routers/lists/models/ListCardsDTO.kt
@@ -4,8 +4,7 @@ import kotlinx.serialization.Serializable
 import pt.isel.ls.tasks.api.routers.cards.models.CardDTO
 import pt.isel.ls.tasks.domain.Card
 
-@Serializable
-data class ListCardsDTO(val boards: List<CardDTO>) {
+@Serializablapi and data class ListCardsDTO(val cards: List<CardDTO>) {
     companion object {
         operator fun invoke(cards: List<Card>): ListCardsDTO =
             ListCardsDTO(
